--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.7",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
@@ -46,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-scroll": "^1.8.4"
   }
 }
